# payroll_data_pipeline

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  snowflake_setup.md
airflow/dags/: payroll_dag.py
airflow/scripts/: extract.py
dbt_payroll/: .user.yml  dbt_project.yml  profiles.yml
dbt_payroll/models/landing/: sources.yml
docker/airflow/: Dockerfile
docker/postgres/: init.sql
